# actix-juniper-sqlx-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  migration.sql  sample.env
src/: graphql_schema.rs  main.rs  models.rs  sql.rs
