[package]
name = "pgsql-demo"
version = "0.1.0"
authors = ["keng <keng911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3.3"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
actix-cors = "0.4.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" }

[dev-dependencies]
actix-rt = "1.1.1"
